# yadirect_bigquery_connector

./: .gitignore  README.md  pyproject.toml
yadirect_bigquery_connector/: bigquery_api.py  gui_qt.ui  main.py  yandex_api.py
